On iOS, use 'left' property to offset gallery images; transforms everywhere else (to reduce chances of mobile Safari crashes). Use a timeout (as a backup plan) for immediate go-tos becuase transitionend won't fire if the images are already at the correct offset.

--- a/src/app/components/Gallery/_index.scss
+++ b/src/app/components/Gallery/_index.scss
@@ -81,8 +81,8 @@
 .Gallery-images {
   display: flex;
   position: relative;
-  transition: transform .125s ease-out;
-  will-change: transform;
+  transition: transform .125s ease-out, left .125s ease-out;
+  will-change: transform, left;
 
   @media #{$mq-lg} {
     transition-duration: .25s;
@@ -293,7 +293,7 @@
 }
 
 .Gallery-step-next {
-  transform: scale(-1, 1);
+  transform: scaleX(-1);
   margin-left: $size-control-margin;
 }
 
